force-app/main/default/objects/LLC_BI__Zero_Balance_Account_Service__c/fields/LLC_BI__Sub_Account_1__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Sub_Account_1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sub Account #1</label>
    <referenceTo>LLC_BI__Deposit__c</referenceTo>
    <relationshipLabel>Zero Balance Account Services (Sub Account #1)</relationshipLabel>
    <relationshipName>Zero_Balance_Account_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>