force-app/main/default/objects/LLC_BI__Zero_Balance_Account_Service__c/fields/LLC_BI__Treasury_Service_Reference__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Treasury_Service_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treasury Service Reference</label>
    <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
    <relationshipLabel>Zero Balance Account Services</relationshipLabel>
    <relationshipName>Zero_Balance_Account_Services</relationshipName>
    <type>Lookup</type>
</CustomField>